--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         </div>
 
                         <div class="col-md-6">
-                            <img src="./images/IMG_1118.jpg" alt="">
+                            <img src="./images/IMG_1118.JPG" alt="">
                         </div>
                     </div>
                 </div>
