--- a/final/index.html
+++ b/final/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- 引用自已定義的CSS -->
+    <link rel="stylesheet" href="./css.css">
+    <title>期末專題 宇宙戰艦歷險</title>
+</head>
+
+<body>
+    <div class="dialogue">
+        <div class="dialogue__content">
+            <h1> &nbsp;&nbsp;宇宙戰艦歷險</h1>
+            <ul>
+                <li>利用 <span class="key key--arrow">←</span> 和 <span class="key key--arrow">→</span> 按鍵左右移動</li>
+                <li>利用 <span class="key">空白鍵</span> 朝著前方發射雷射光</li>
+                <li>消滅隕石以獲取更高的分數吧!!!</li>
+            </ul>
+            <button>開始</button>
+        </div>
+    </div>
+    <ul class="hud hud--hidden">
+        <li class="hud__score">分數： <span>0</span></li>
+    </ul>
+    <!-- 引用自己寫的 js -->
+    <script src="./js.js"></script>
+</body>
+
+</html>
