--- a/final/index.html
+++ b/final/index.html
@@ -24,6 +24,8 @@
     <ul class="hud hud--hidden">
         <li class="hud__score">分數： <span>0</span></li>
     </ul>
+    <!-- 引用jquery -->
+    <script src='//code.jquery.com/jquery-2.1.4.min.js'></script>
     <!-- 引用自己寫的 js -->
     <script src="./js/js.js"></script>
 </body>
