--- a/final/index.html
+++ b/final/index.html
@@ -28,7 +28,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
 
     <script>
-        $('ul li').addClass('textcolor');
+        $("ul li").addClass("textcolor");
     </script>
     <!-- 引用自己寫的 js -->
     <script src="./js.js"></script>
