--- a/final/index.html
+++ b/final/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- 引用自已定義的CSS -->
-    <link rel="stylesheet" href="./css.css">
+    <link rel="stylesheet" href="./css/css.css">
     <title>期末專題 宇宙戰艦歷險</title>
 </head>
 
@@ -31,7 +31,7 @@
         $("ul li").addClass("textcolor");
     </script>
     <!-- 引用自己寫的 js -->
-    <script src="./js.js"></script>
+    <script src="./js/js.js"></script>
 </body>
 
 </html>
