--- a/resume/index.html
+++ b/resume/index.html
@@ -92,7 +92,7 @@
                         <h2 class="mt-2 mb-0" style="font-size: 20px; text-transform: capitalize;">Education</h2>
                         <p class="mb-0">Candidate for Bachelor of Finance, National Taiwan University (2017.09~now)</p>
                         <ul class="mb-0">
-                            <li>Cumulative GPA : 4.08/4.3</li>
+                            <li>Cumulative GPA : 4.11/4.3</li>
                             <li>Honors and Awards : Presidential Award (top 5% of class), Spring 2019</li>
                         </ul>
                         <p class="mb-0">Taipei Municipal Jianguo High School (2014.09~2017.06)</p>
@@ -119,8 +119,8 @@
                         </ul>
 
                         <h2 class="mt-2 mb-0" style="font-size: 20px; text-transform: capitalize;">Skills</h2>
-                        <p class="mb-0">Familiar with Python, C++, R, SQL. </p>
-                        </ul>Proficiency in Microsoft Word, Excel, PowerPoint.
+                        <p class="mb-0">Proficiency in Python, MS SQL, Microsoft Word, Microsoft Excel, Microsoft PowerPoint. </p>
+                        </ul>Familiar with C++, R, VBA.
                         </ul>
 
                         <h2 class="mt-2 mb-0" style="font-size: 20px; text-transform: capitalize;">Personal</h2>
